# mln

python/: README.md  pyproject.toml
python/configs/: default.yaml
python/data/cache/: predictions.parquet  prices_5m.parquet
python/data/raw/: calendar.csv  macro_events.parquet  prices.parquet  sentiment.parquet
python/scripts/: analyze_predictions.py  fetch_external_data.py  train_full.sh
python/src/fx_intraday_ai/: __init__.py  cli.py
python/src/fx_intraday_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/src/fx_intraday_ai/backtest/: simulator.py
python/src/fx_intraday_ai/data/: dukascopy.py  loader.py  pipeline.py  schemas.py
python/src/fx_intraday_ai/features/: engineer.py
python/src/fx_intraday_ai/labels/: intraday.py
python/src/fx_intraday_ai/models/: multitask_transformer.py
python/src/fx_intraday_ai/training/: dataset.py  splits.py  trainer.py
python/src/fx_intraday_ai/utils/: config.py
